ficxed gainesbille on map

--- a/view_heatmap.html
+++ b/view_heatmap.html
@@ -355,7 +355,8 @@
                 'TPC Sawgrass': 'images/tpc-sawgrass.jpg',
                 'Hard Rock Stadium': 'images/HardRock.webp',
                 'Exploria Stadium': 'images/exploria.jpg',
-                'Addition Financial Arena': 'images/ucf-arena.jpg'
+                'Addition Financial Arena': 'images/ucf-arena.jpg',
+                'Ben Hill Griffin Stadium': 'images/ben-hill.png'
             },
             airports: {
                 'Orlando International Airport': 'images/mco.jpg',
@@ -363,7 +364,8 @@
                 'Miami International Airport': 'images/miami.png',
                 'Fort Lauderdale-Hollywood': 'images/fll.jpg',
                 'Jacksonville International': 'images/jax.avif',
-                'Lakeland Linder International': 'images/lakeland-airport.jpg'
+                'Lakeland Linder International': 'images/lakeland-airport.jpg',
+                'Gainesville Regional Airport': 'images/GNV.jpg'
             },
             villages: {
                 'Lakeland Olympic Village': 'images/lakeland.jpg',
