Update title to Florida TOL and add Benefit-Cost-Visualization-Model files

--- a/view_heatmap.html
+++ b/view_heatmap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Florida GTO Olympic Bid - Strategic Analysis</title>
+    <title>Florida TOL Olympic Corridor Analysis</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -360,7 +360,7 @@
             <div class="header-top">
                 <div class="vertical-accent"></div>
                 <div class="header-content">
-                    <h1>Florida GTO Triangle Olympic Corridor Analysis</h1>
+                    <h1>Florida TOL Olympic Corridor Analysis</h1>
                     <p>Strategic Infrastructure & Population Growth Assessment</p>
                     <p class="insight">Corridor demonstrates fiscally controlled, schedule-feasible Olympic execution with state coordination</p>
                 </div>
